--- a/src/main/resources/textcontent/pagecontent_en_US.properties
+++ b/src/main/resources/textcontent/pagecontent_en_US.properties
@@ -1,2 +1,62 @@
 header.icon=EN
 header.profile=Profile
+header.myBets=My bets
+header.manageUsers=Manage users
+header.FAQ=FAQ
+header.howBets=How can I make bets?
+header.howCash=How can I top up cash?
+header.howWithdrawal=How can I make withdrawal?
+header.main=Main
+footer.fireBets=Copyright © 1997-2018 FireBets.ru Sportsbook
+footer.allRights=All Rights Reserved
+change_bet.cBets=Change bets
+change_bet.rItems=All items should be indicated
+change_bet.cType=Choose type of bets
+change_bet.win=Win
+change_bet.coeff=coeff
+change_bet.draw=Draw
+change_bet.eScore=Exact score
+change_bet.yBet=Enter your bet
+change_bet.goals=Goals
+change_bet.money=Not enough money for bet
+change_bet.confirm=Confirm
+change_coeff.cCoeff=Change coefficient
+makeBet=Make bet
+createMatch=Create match
+rMatch=Register match
+dMatch=Day of match
+tMatch=Time of match
+timeMatch=Time
+send=Send
+yourBet=Your bet
+typeBet=Your type of bet 
+score=Score
+sResults=Set up results
+eResults=Enter results of match
+login=Login
+password=Password
+enter=Enter
+fPassword=Forget your password?
+registration=Registration
+hi=Hi
+exit=Exit
+myBets=My bet
+match=Match
+tBet=Time of bet is already up
+yLogin=Your login
+yMail=Your e-mail
+yBalance=Your balance
+yStatus=Your status
+name=Name
+sName=Surname
+tNumber=Telephone number
+cPassword=Confirm password
+eData=Enter users` data
+iUser=Information about user
+balance=Balance
+status=Status
+cancel=Cancel
+change=Change
+error=Something went wrong, try again later.
+account=Not have account?
+
