--- a/src/main/resources/textcontent/pagecontent_en_US.properties
+++ b/src/main/resources/textcontent/pagecontent_en_US.properties
@@ -24,12 +24,12 @@ change_coeff.cCoeff=Change coefficient
 makeBet=Make bet
 createMatch=Create match
 rMatch=Register match
-dMatch=Day of match
+dMatch=Day of match(eeee-mm-dd)
 tMatch=Time of match
 timeMatch=Time
 send=Send
 yourBet=Your bet
-typeBet=Your type of bet 
+typeBet=Your type of bet
 score=Score
 sResults=Set up results
 eResults=Enter results of match
